tests/struct/syntax_err1.rz
struct Foo {
    fn init // error: missing '(' after function name

}
